--- a/src/wasm2c.c.tmpl
+++ b/src/wasm2c.c.tmpl
@@ -9,10 +9,10 @@
 #define TRAP(x) (wasm_rt_trap(WASM_RT_TRAP_##x), 0)
 
 #define FUNC_PROLOGUE                                            \
-  if (++wasm_rt_call_stack_depth > WASM_RT_MAX_CALL_STACK_DEPTH) \
+  if (++module_instance->wasm_rt_call_stack_depth > WASM_RT_MAX_CALL_STACK_DEPTH) \
     TRAP(EXHAUSTION)
 
-#define FUNC_EPILOGUE --wasm_rt_call_stack_depth
+#define FUNC_EPILOGUE --module_instance->wasm_rt_call_stack_depth
 
 #define UNREACHABLE TRAP(UNREACHABLE)
 
